--- a/presentation_main.html
+++ b/presentation_main.html
@@ -277,7 +277,7 @@
                     </div>
                 </div>
                 <div style="flex: 1 1 400px; text-align: center;">
-                    <img src="hero-illustration.png" alt="НДС без стресса" style="max-width: 100%; height: auto; border-radius: 20px;">
+                    <img src="hero-illustration.webp" alt="НДС без стресса" style="max-width: 100%; height: auto; border-radius: 20px;">
                 </div>
             </div>
         </div>
@@ -299,7 +299,7 @@
             <h2 style="max-width: 800px; margin: 0 auto 16px;">«Раньше платил патент — и спал спокойно. Теперь каждые три месяца — стресс»</h2>
             <p style="font-size: 1.2rem; color: #3a5a6c; max-width: 700px; margin: 0 auto 20px;">ИП и небольшие компании на УСН или патенте, которых НДС застал врасплох после превышения лимита выручки.</p>
             <div style="max-width: 500px; margin: 24px auto;">
-                <img src="problem-illustration.png" alt="Проблема с документами" style="max-width: 100%; height: auto; border-radius: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.08);">
+                <img src="problem-illustration.webp" alt="Проблема с документами" style="max-width: 100%; height: auto; border-radius: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.08);">
             </div>
         </div>
 
