--- a/presentation_main.html
+++ b/presentation_main.html
@@ -330,7 +330,7 @@
                     <p style="font-size: 1.2rem; color: #1e4c6b; margin-top: 16px;">Мы не учим скучной теории. Мы просто делаем рутину за вас.</p>
                 </div>
                 <div style="flex: 1 1 300px;">
-                    <img src="solution-bot.png" alt="Решение через бота" style="max-width: 100%; height: auto; border-radius: 20px;">
+                    <img src="solution-bot.webp" alt="Решение через бота" style="max-width: 100%; height: auto; border-radius: 20px;">
                 </div>
             </div>
             
@@ -348,7 +348,7 @@
                     <h3 style="margin-bottom: 12px;">Автосбор входящих УПД</h3>
                     <p style="color: #3a5a6c;">Перешлите письмо с PDF на наш адрес или кидайте файл в бота в Telegram или MAX. Мы вытащим дату, сумму, НДС и сохраним в «Книгу учёта». Вы ничего не вводите руками.</p>
                     <div style="margin-top: 16px; background: #f3f9fc; border-radius: 18px; padding: 14px;">
-                        <img src="document-processing.png" alt="Автообработка документов" style="max-width: 100%; height: auto; border-radius: 12px; margin-bottom: 10px;">
+                        <img src="document-processing.webp" alt="Автообработка документов" style="max-width: 100%; height: auto; border-radius: 12px; margin-bottom: 10px;">
                         <div><i class="fas fa-paper-plane" style="color: #1e4c6b;"></i> Работает как пересылка фото другу</div>
                     </div>
                 </div>
@@ -357,7 +357,7 @@
                     <h3 style="margin-bottom: 12px;">Напоминалка + отчёт</h3>
                     <p style="color: #3a5a6c;">За 10 дней до срока: «Пора сдавать декларацию». Мы сами собираем все цифры, вы проверяете и платите налог. Никаких штрафов за забывчивость.</p>
                     <div style="margin-top: 16px; background: #f3f9fc; border-radius: 18px; padding: 14px;">
-                        <img src="calendar-reminders.png" alt="Напоминания о сроках" style="max-width: 100%; height: auto; border-radius: 12px; margin-bottom: 10px;">
+                        <img src="calendar-reminders.webp" alt="Напоминания о сроках" style="max-width: 100%; height: auto; border-radius: 12px; margin-bottom: 10px;">
                         <div><i class="fas fa-bell"></i> Никогда не пропустите 25‑е число</div>
                     </div>
                 </div>
