--- a/presentation_main.html
+++ b/presentation_main.html
@@ -618,7 +618,7 @@
                 <h2 style="margin: 0 auto 10px;">Безопасность и данные — человеческим языком</h2>
                 <p style="font-size: 1.1rem; color: #3a5a6c; max-width: 820px; margin: 0 auto 20px;">Мы строим сервис так, чтобы вам не приходилось отдавать доступы и рисковать.</p>
                 <div style="max-width: 700px; margin: 24px auto;">
-                    <img src="security-illustration.png" alt="Безопасность данных" style="max-width: 100%; height: auto; border-radius: 20px;">
+                    <img src="security-illustration.webp" alt="Безопасность данных" style="max-width: 100%; height: auto; border-radius: 20px;">
                 </div>
             </div>
             <div class="grid-2" style="align-items: stretch;">
